Stopping the scrolling from going crazy on mobile by removing the fixed class from 480px sites

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2592,12 +2592,14 @@ article.tutorial nav.outline.toc
   opacity: 1 !important; /* to ignore the fadeToggle on wide-display treatment */
 }
 
-article.tutorial nav.outline.toc.fixed
-{
-  position: fixed;
-  top: 50px;
-  left: 50%;
-  margin-left: -500px;
+@media (min-width:480px) {
+  article.tutorial nav.outline.toc.fixed
+  {
+    position: fixed;
+    top: 50px;
+    left: 50%;
+    margin-left: -500px;
+  }
 }
 
 article.tutorial nav.outline h3
